# paper-recommender

./: .gitignore  README.md
api/: .env.sample  Dockerfile  Makefile  docker-compose.yaml  pyproject.toml
api/core/: character.py  config.py  keyword.py
api/data/dictionary/: user.dic  userdic.csv
api/data/papers/: j-stage.json
api/models/: chat.py  ids.py
api/scripts/: userdic.py
api/server/: main.py  st.py
api/server/middleware/: timeout.py
api/server/routes/: chat.py  health.py  ids.py  router.py
api/services/logics/: recommender.py
api/services/prompts/: keyword.py  summary.py  talk.py
api/utils/: dynamodb.py  pc.py
terraform/: dynamodb.tf  provider.tf  variables.tf
